--- a/todo.txt
+++ b/todo.txt
@@ -2,10 +2,8 @@ Initialization:
 * Rework CFG to be updated with any CLI args that have overridden the values (but do not save the cfg file).
 
 UI:
-* Blinking button when DLEngine is enabled.
 * Clean up DL Engine listener thread prior to quitting.
-* Image sizing - keep at 1:1, or x:x but fit within viewer.
-
+* Add tabbed view in primary view.
 
 GENERAL:
 * Address all documentation TODOs
