Converted activation buttons from 2 independent buttons to single toggled button (with color).

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@ Initialization:
 UI:
 * Clean up DL Engine listener thread prior to quitting.
 * Add tabbed view in primary view.
+* Fix MP4 displaying issue (!display)
 
 GENERAL:
 * Address all documentation TODOs
