Added link from DL to query, just to check understanding. Yep... I's got it!

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,4 @@ UI:
 
 GENERAL:
 * Address all documentation TODOs
+* Strange output errors from pyperclip - saves URL, but filename is munged. Can be corrected manually by reDL'ing and updating file.
