Modified data models in preparation for adding database. * Has no direct impact on current functionality. * Adds additional attributes and allows complete instantiation (some attributes were determined at runtime, but can be now passed in).

--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@ UI:
 * Check and debug errors when scaling images:
   >> QPixmap::scaled: Pixmap is a null pixmap
   >> qt.gui.icc: fromIccProfile: failed minimal tag size sanity
+* Have windows scroll with additional output.
 
 GENERAL:
 * Address all documentation TODOs
