Added ability to query entire DB with MediaRecordDoc.search_inventory() * Added some hacks until DB is populated on a consistent doc structure - new/missing fields are populated within the code. * Issue where paths are being duplicated - hack fix. See todo.txt * Added property MediaRecord.favorite - scans metadata and returns corresponding value, or False by default.

--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,13 @@ UI:
   >> QPixmap::scaled: Pixmap is a null pixmap
   >> qt.gui.icc: fromIccProfile: failed minimal tag size sanity
 * Have windows scroll with additional output.
+* On exit, if the DL thread is active, run the inventory.
+
 
 GENERAL:
 * Address all documentation TODOs
 * Strange output errors from pyperclip - saves URL, but filename is munged. Can be corrected manually by reDL'ing and updating file.
+* Paths being duplicated (see view_inventory, remove list(set()) from record.__str__.
 
 STORAGE:
 # Make DB indices dynamic (config file or read from DB host)
